# superchain

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml
.github/: codecov.yml
.github/workflows/: coverage.yaml  no_std.yaml  release.yaml  rust_ci.yaml  submodule_sync.yaml
crates/derive/: Cargo.toml  README.md
crates/derive/src/: blob_provider.rs  lib.rs
crates/driver/: Cargo.toml  README.md
crates/driver/src/: beacon_client.rs  blob_provider.rs  blobs.rs  chain_provider.rs  config.rs  driver.rs  executor.rs  l2_chain_provider.rs  lib.rs  pipeline.rs
crates/driver/src/context/: mod.rs  standalone.rs  traits.rs  types.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: api.rs  client.rs  constructor.rs  controller.rs  epoch.rs  errors.rs  lib.rs  traits.rs  types.rs  validation.rs  validator.rs
crates/hilo/: Cargo.toml  README.md
crates/hilo/src/: lib.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: builder.rs  lib.rs
crates/net/src/discovery/: bootnodes.rs  driver.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: config.rs  errors.rs  lib.rs  node.rs  sync.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: addresses.rs  block.rs  chain_config.rs  fee_params.rs  genesis.rs  lib.rs  rollup_config.rs  superchain.rs  system_config.rs
crates/providers-alloy/: Cargo.toml  README.md
crates/providers-alloy/src/: beacon_client.rs  blob_provider.rs  blobs.rs  chain_provider.rs  l2_chain_provider.rs  lib.rs
crates/providers-local/: Cargo.toml  README.md
crates/providers-local/src/: chain_provider.rs  l2_chain_provider.rs  lib.rs
crates/registry/: Cargo.toml  Justfile  README.md
crates/registry/src/: chain_list.rs  lib.rs  superchain.rs
crates/super/: Cargo.toml  README.md
crates/super/src/: lib.rs
crates/superchain/: Cargo.toml  README.md
crates/superchain/src/: lib.rs  superchain.rs
scripts/: bind.sh
src/: lib.rs  superchain.rs
