[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT"
rust-version = "1.81"
authors = ["clabby", "refcell"]
homepage = "https://github.com/anton-rs/hilo"
repository = "https://github.com/anton-rs/hilo"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Workspace
hilo = { version = "0.11.0", path = "crates/hilo", default-features = false }
hilo-net = { version = "0.11.0", path = "crates/net", default-features = false }
hilo-driver = { version = "0.11.0", path = "crates/driver", default-features = false }
hilo-derive = { version = "0.11.0", path = "crates/derive", default-features = false }
hilo-registry = { version = "0.11.0", path = "crates/registry", default-features = false }

# Kona
kona-derive = { version = "0.0.6", default-features = false }

# Alloy
alloy-rlp = { version = "0.3.9", default-features = false }
alloy-eips = { version = "0.6.2", default-features = false }
alloy-serde = { version = "0.6.2", default-features = false }
alloy-provider = { version = "0.6.2", default-features = false }
alloy-primitives = { version = "0.8.11", default-features = false }
alloy-consensus = { version = "0.6.2", default-features = false }
alloy-transport = { version = "0.6.2", default-features = false }
alloy-rpc-client = { version = "0.6.2", default-features = false }
alloy-rpc-types-eth = { version = "0.6.2", default-features = false }
alloy-node-bindings = { version = "0.6.2", default-features = false }
alloy-transport-http = { version = "0.6.2", default-features = false }
alloy-rpc-types-beacon = { version = "0.6.2", default-features = false }
alloy-rpc-types-engine = { version = "0.6.2", default-features = false }

# OP Alloy
op-alloy-genesis = { version = "0.6.3", default-features = false }
op-alloy-protocol = { version = "0.6.3", default-features = false }
op-alloy-consensus = { version = "0.6.3", default-features = false }
op-alloy-rpc-types-engine = { version = "0.6.3", default-features = false }

# Serialization
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

# Tracing
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }

# Networking
snap = "1.1.1"
discv5 = "0.9.0"
libp2p = "0.54.1"
openssl = "0.10.68"
libp2p-identity = "0.2.9"

# Testing
arbtest = "0.3"
arbitrary = "1"

# Misc
lru = "0.12.5"
eyre = "0.6.12"
clap = "4.5.20"
tokio = "1.41.0"
futures = "0.3.31"
reqwest = "0.12.9"
async-trait = "0.1.83"
unsigned-varint = "0.8.0"
derive_more = { version = "1.0.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
