[package]
name = "hilo-driver"
description = "Derivation driver for the OP Stack"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-driver.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-serde.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Reth
reth.workspace = true

# Misc
url.workspace = true
eyre.workspace = true
serde.workspace = true
reqwest.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
derive_more = { workspace = true, features = ["full"] }

[features]
default = []
