[package]
name = "hilo-driver"
description = "Derivation driver for the OP Stack"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-driver.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-serde.workspace = true
alloy-network.workspace = true
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-provider = { workspace = true, features = ["ipc", "ws", "reqwest"] }
alloy-rpc-types = { workspace = true, features = ["ssz"] }
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Reth
reth-provider.workspace = true
reth-primitives.workspace = true
reth-execution-types.workspace = true
reth-exex = { workspace = true, features = ["serde"] }

# Misc
url.workspace = true
eyre.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["json"] }
derive_more = { workspace = true, features = ["full"] }

[features]
default = []
