[package]
name = "hilo-driver"
description = "Derivation driver for the OP Stack"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Local
hilo-engine.workspace = true
hilo-providers-local.workspace = true
hilo-providers-alloy.workspace = true

# Kona
kona-derive.workspace = true
kona-driver.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-provider = { workspace = true, features = ["ipc", "ws", "reqwest"] }
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Reth
reth-primitives.workspace = true
reth-execution-types.workspace = true
reth-exex = { workspace = true, features = ["serde"] }

# Misc
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
futures.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
reqwest.workspace = true
eyre.workspace = true

[features]
default = []
