[package]
name = "hilo-engine"
description = "Engine Controller Peripheral to the Driver"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# Misc
again.workspace = true
serde.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
thiserror.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
