[package]
name = "hilo-engine"
description = "Engine Controller Peripheral to the Driver"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-provider = { workspace = true, features = ["ipc", "reqwest"] }
alloy-primitives = { workspace = true, features = ["map"] }
alloy-transport-http = { workspace = true, features = ["jwt-auth"] }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

op-alloy-provider.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Misc
url.workspace = true
tracing.workspace = true
tower.workspace = true
http-body-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
