[package]
name = "hilo-engine"
description = "Engine Controller Peripheral to the Driver"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Hilo
hilo-providers-alloy.workspace = true

# Kona
kona-driver.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-provider = { workspace = true, features = ["ipc", "reqwest", "engine-api"] }
alloy-primitives = { workspace = true, features = ["map"] }
alloy-transport-http = { workspace = true, features = ["jwt-auth"] }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# Op Alloy
op-alloy-genesis.workspace = true
op-alloy-provider.workspace = true
op-alloy-consensus.workspace = true
op-alloy-protocol.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Misc
async-trait.workspace = true
url.workspace = true
tokio.workspace = true
tracing.workspace = true
tower.workspace = true
http-body-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
