[package]
name = "hilo"
description = "Components for the Superchain"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hilo-derive = { workspace = true, optional = true }
hilo-registry = { workspace = true, optional = true }

[features]
default = ["std", "full"]

std = ["hilo-registry?/std"]

full = [
  "derive",
  "registry",
]

derive = ["dep:hilo-derive"]
registry = ["dep:hilo-registry"]

test-utils = ["hilo-derive?/test-utils"]
