[package]
name = "hilo-node"
description = "The Hilo Consensus Node"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# op-alloy
op-alloy-genesis.workspace = true

# Misc
serde.workspace = true
url = { workspace = true, features = ["serde"] }
