[package]
name = "hilo-node"
description = "The Hilo Consensus Node"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Local
hilo-engine.workspace = true
hilo-driver.workspace = true

# Alloy
alloy-transport.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# op-alloy
op-alloy-genesis = { workspace = true, features = ["serde"] }

# Misc
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
op-alloy-registry.workspace = true
