[package]
name = "superchain-primitives"
description = "Primitive Types for the Superchain Registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

# Misc
anyhow.workspace = true

# `serde` feature flag dependencies
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
toml.workspace = true

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde", "dep:serde_repr", "dep:serde_json", "alloy-eips/serde", "alloy-consensus/serde", "alloy-primitives/serde"]
