[package]
name = "hilo-providers-alloy"
description = "Alloy-backed providers for hilo"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-serde.workspace = true
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-provider = { workspace = true, features = ["ipc", "ws", "reqwest"] }
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true
op-alloy-consensus.workspace = true

# Misc
url.workspace = true
tracing.workspace = true
lru.workspace = true
serde.workspace = true
eyre.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tokio.workspace = true
