[package]
name = "hilo-registry"
description = "The Superchain Registry"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
op-alloy-genesis = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true, features = ["spin_no_std"] }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["raw_value"] }

[dev-dependencies]
alloy-eips.workspace = true

[features]
default = ["std", "map-foldhash"]
map-hashbrown = ["alloy-primitives/map-hashbrown"]
map-foldhash = ["alloy-primitives/map-foldhash"]
std = ["op-alloy-genesis/std", "serde_json/std"]
