[package]
name = "super"
description = "Components for the Superchain"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
superchain-derive = { workspace = true, optional = true }
superchain-registry = { workspace = true, optional = true }

[features]
default = ["std", "full"]

std = ["superchain-registry?/std"]

full = [
  "derive",
  "registry",
]

derive = ["dep:superchain-derive"]
registry = ["dep:superchain-registry"]

test-utils = ["superchain-derive?/test-utils"]
