[package]
name = "super"
description = "Components for the Superchain"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
super-derive = { workspace = true, optional = true }
super-registry = { workspace = true, optional = true }

[features]
default = ["std", "full"]

std = ["super-registry?/std"]

full = [
  "derive",
  "registry",
]

derive = ["dep:super-derive"]
registry = ["dep:super-registry"]

test-utils = ["super-derive?/test-utils"]
