[package]
name = "superchain"
description = "The Superchain Registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
superchain-primitives.workspace = true

# `serde` is optional, but enabled by default
# Since superchain-registry requires `serde`, we mark it as optional
superchain-registry = { workspace = true, optional = true }

[features]
default = ["serde", "std"]

serde = [
  "dep:superchain-registry",
  "superchain-primitives/serde",
]

std = [
  "serde",
  "dep:superchain-registry",
  "superchain-registry/std",
  "superchain-primitives/std",
]
