[package]
name = "superchain"
description = "The Superchain Registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Alloy
alloy-primitives.workspace = true
op-alloy-genesis = { workspace = true, features = ["serde"] }

# Misc
lazy_static.workspace = true
hashbrown.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy-eips.workspace = true

[features]
default = ["std"]
std = ["op-alloy-genesis/std", "serde_json/std"]
