[package]
name = "superchain"
description = "Components for the Superchain"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hilo-driver = { workspace = true, optional = true }
hilo-registry = { workspace = true, optional = true }

[features]
default = ["std", "full"]

std = ["hilo-registry?/std"]

full = [
  "driver",
  "registry",
]

driver = ["dep:hilo-driver"]
registry = ["dep:hilo-registry"]
